# rmdt.nvim

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
src/: fmt.rs  lib.rs  opts.rs  swap.rs  types.rs  utils.rs
