[package]
name = "rmdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = {version = "0.4.1", features = ["neovim-nightly"]}
regex = "1.10.2"
once_cell = "1.19.0"
rayon = "1.8.0"
serde = "1.0.194"