[package]
name = "rmdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { features = ["neovim-nightly"], git = "https://github.com/noib3/nvim-oxi.git"}
regex = "1.10.4"
once_cell = "1.19.0"
rayon = "1.10.0"
serde = "1.0.198"
